Added the icons and immage

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <div class="sidebar">
-        <img src="/static/images/profile.jpg" alt="Saimir Baci Profile" class="profile-pic">  <!-- Image tag added -->
+        <img src="images/profile.jpg" alt="Saimir Baci Profile" class="profile-pic">  <!-- Image tag added -->
         <h1>Saimir Baci</h1>
         <div class="contact-icons">
             <a href="mailto:saimirbaci@hotmail.com" target="_blank">
-                <img src="/static/images/email.png" alt="Email">
+                <img src="images/email.png" alt="Email">
             </a>
             <a href="https://www.linkedin.com/in/saimir-baci/" target="_blank">
-                <img src="/static/images/linkedin.png" alt="LinkedIn">
+                <img src="images/linkedin.png" alt="LinkedIn">
             </a>
             <a href="http://github.com/saimirbaci" target="_blank">
-                <img src="/static/images/github.png" alt="Website">
+                <img src="images/github.png" alt="Website">
             </a>
         </div>
         <nav>
