--- a/experience.html
+++ b/experience.html
@@ -1,9 +1,20 @@
 <div class="experience-item">
+    <h3>Antler, Apr 2025 - </h3>
+    <h3>Building a venture company</h3>
+    <p>Building a venture company to create AI based products that create value by automating everyday mundane tasks</p>
+</div>
+<div class="experience-item">
+    <h3>Yeji Datalab, Aug 2024 - Mar 2025</h3>
+    <h3>Tech lead in delivering AI solutions to the supply chain industry</h3>
+    <p>Building products using AI to track container status, predict risk in construction projects, predict lumber prices, task scheduling</p>
+</div>
+<div class="experience-item">
+    <h3>Avidbots, Nov 2023 - Aug 2024</h3>
     <h3>Researching and Consulting LLM Agents</h3>
     <p>Doing research and consulting on how companies can use LLM Agents in their development processes</p>
 </div>
 <div class="experience-item">
-    <h3>Avidbots, Nov 2021 - November 2023</h3>
+    <h3>Avidbots, Nov 2021 - Nov 2023</h3>
     <p>As a team lead at Avidbots/ATG, responsible for planning and leading technical development of cutting-edge robotics technologies, focusing on areas such as planning, perception and localisation.</p>
 </div>
 <div class="experience-item">
