--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <div class="experience-item">
     <h3>Antler, Apr 2025 - </h3>
     <h3>Building a venture company</h3>
-    <p>Building a venture company to create AI based products that create value by automating everyday mundane tasks</p>
+    <p>Augmentifai is a built to create AI based products that create value by automating everyday mundane tasks</p>
 </div>
 <div class="experience-item">
     <h3>Yeji Datalab, Aug 2024 - Mar 2025</h3>
