--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <h2>About Me</h2>
             <p>I am an international engineer and applied researcher with a passion for technology.</p>
             <ul>
-                <li>Currently Researching and Consulting in the field of LLMs and Agent Development</li>
+                <li>Currently building a venture company to create AI products that automate the everyday's mundane tasks</li>
+                <li>Was Tech Lead at Yeji DataLab</li>
                 <li>Was Manager at Avidbots, leading the Advanced Technology Group focused on robotic innovations.</li>
                 <li>Led supply chain and optimization projects usign ML at Ivado Labs.</li>
                 <li>Significant role in product development and prototype testing at Volvo's research department.</li>
